<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Easy Budget</string>
    <string name="month_tip">Месяц:</string>
    <string name="newMonthButtonTip">Новый месяц</string>
    <string name="newMonthButtonOk">Готово!</string>
    <string name="newMonthButtonIncome">Прибыль</string>
    <string name="newMonthButtonExpend">Траты</string>
    <string name="financeOperations">Финансы</string>
    <string name="emptyDetails">Нет данных о финансах</string>
    <string name="hintExplain">Описание</string>
    <string name="hintPrice">Сумма</string>
    <string name="hintQuantity">Кол-во</string>
    <string name="hintCategory">Категория</string>
    <string name="hintType">Тип операции</string>
    <string name="tipNewFinanceOperation">Добавить операцию</string>
    <string name="errEmptyField">Заполнены не все поля</string>
    <string name="hintDays">Выберите день</string>
    <string name="year_tag">год</string>
    <string name="errNoCursor">ОШИБКА: невозможно создать представление - курсор не инициализирован</string>
	<string name="hintSelectDate">Выберите дату</string>
	<string name="button_ok">OK</string>
	<string name="button_cancel">Отмена</string>
    <string name="money_format">%9.2f</string>
    <string name="type_income">Доходы</string>
    <string name="type_expend">Расходы</string>
    <string name="date_main_hint">Дата</string>
    <string name="new_category">Новая категория</string>
    <string name="hint_income">Доходы:</string>
    <string name="hint_expend">Расходы:</string>
    <string name="format_income">Доходы: %9.2f</string>
    <string name="format_expend">Расходы: %9.2f</string>

    <!-- Dialog items -->
    <string name="dialog_category_title_add">Добавление категории</string>
    <string name="dialog_category_title_edit">Изменение категории</string>
    <string name="dialog_category_hint">Введите название категории</string>
    
    <!-- Menu items -->
    <string name="menuCurrencyTitle">Валюта</string>
    <string name="menuQuantityTitle">Единицы измерения</string>
    <string name="menuDeveloperHelp">Помощь разработчикам</string>
    <string name="menuPreferences">Настройки</string>
    <string name="menuEdit">Изменить</string>
    <string name="menuDelete">Удалить</string>
    <string name="menuNewItem">Добавить</string>
    <string name="menuCategory">Категории</string>
    
    <!-- Preferences -->
    <string name="preferenceTitle">Настройки</string>
    <string name="currencyPreference">Валюта</string>
    <string name="quantityPreference">Единицы измерения</string>
    
    <!-- Currences -->
    <string name="currencyDialogTitle">Выберите валюту:</string>
    <string name="currencyRur">RUR</string>
    <string name="currencyEur">EUR</string>
    <string name="currencyUsd">USD</string>
    <string name="currencyUserDefined">Своя</string>
    
    <!-- Quntities -->
    <string name="quantityDialogTitle">Выберите единицу измерения</string>

    <!-- Dialog items -->
    <string name="deleteDialogTitle">Удаление записи</string>
    <string name="dialogOK">ОК</string>
    <string name="dialogCancel">Отмена</string>
    <string name="deleteDialogFinalAsk">Вы уверены, что хотите удалить запись?</string>

    <!-- Stubs -->
    <string name="stubCategory">Категория</string>
    <string name="stubSumm">Сумма</string>
    <string name="stubDate">Дата</string>
    <string name="stubExplain">Описание</string>
    <string name="stubCost">0.0</string>
    <string name="stubQuant">0</string>
    <string name="stubTotal">0</string>

    <!-- intents -->
    <string name="INTENT_ACTION_ADD">ru.nstudio.android.addDetails</string>
    <string name="INTENT_ACTION_CHANGE">ru.nstudio.android.changeMonth</string>
    <string name="INTENT_ACTION_SHOW_DETAILS">ru.nstudio.android.showDetails</string>
    <string name="INTENT_ACTION_SHOW_ALL_CATEGORIES">ru.nstudio.android.showAllCategories</string>

    <string name="TAG">CalcMoney</string>

    <string name="key_finance_id">ru.nstudio.android.idFinance</string>
    <string name="key_selected_item">ru.nstudio.android.selectedItem</string>
    <string name="key_month_title">ru.nstudio.android.monthTitle</string>
    <string name="key_year">ru.nstudio.android._year</string>
    <string name="key_month">ru.nstudio.android._month</string>
	    
    <string-array name="strArrayMonths">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>
    
    <string-array name="currences">
    	<item>RUR</item>
    	<item>EUR</item>
    	<item>USD</item>
    	<item>Другая</item>
    </string-array>
    
    <string-array name="currency_values">
    	<item>0</item>
    	<item>1</item>
    	<item>2</item>
    	<item>3</item>
    </string-array>

    <string-array name="quantity">
    	<item>Ед.</item>
    	<item>Шт.</item>
    </string-array>
    
    <string-array name="quantity_values">
    	<item>0</item>
    	<item>1</item>
    </string-array>
</resources>